--- a/BT hotel website/about.html
+++ b/BT hotel website/about.html
@@ -7,6 +7,7 @@
     <meta name="description" content="welcome to the extraodinary hotel in delhi">
     <meta name="keyword" content="hotel,mumbai,new mahastra hotel">
     <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" media = "screen and (max-width: 768px)" href="mobile.css">
     <title>HOTEL BT | About</title>
 </head>
 <body>
