adding css link for mobile design

--- a/BT hotel website/contact.html
+++ b/BT hotel website/contact.html
@@ -7,6 +7,7 @@
     <meta name="description" content="welcome to the extraodinary hotel in delhi">
     <meta name="keyword" content="hotel,mumbai,new mahastra hotel">
     <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" media = "screen and (max-width: 768px)" href="mobile.css">
     <script src="https://kit.fontawesome.com/d43c15ac5e.js" crossorigin="anonymous"></script>
 
     <title>HOTEL BT | Contact</title>
