--- a/Tindog/index.html
+++ b/Tindog/index.html
@@ -57,7 +57,7 @@
               class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6 ms-auto">
-          <img src="images/iphone6.png" alt="iphone-mockup">
+          <img class="tittle-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -200,17 +200,21 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    <h1>Find the True Love of Your Dog's Life Today.</h1>
+    <button class="btn btn-dark btn-lg Download-button" type="button"><i class="fa-brands fa-apple"></i>
+      Download</button>
+    <button class="btn btn-outline-light btn-lg Download-button" type="button"><i
+        class="fa-brands fa-google-play"></i> Download</button>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="fa-brands brand-icon fa-twitter"></i>
+    <i class="fa-brands brand-icon fa-instagram"></i>
+    <i class="fa-brands brand-icon fa-facebook"></i>
+    <i class="fa-solid brand-icon fa-envelope"></i>
     <p>© Copyright TinDog</p>
 
   </footer>
