--- a/dicee roll/dicee.html
+++ b/dicee roll/dicee.html
@@ -5,12 +5,10 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-    <script src="external.js"></script>
-
   </head>
   <body>
 
-    <div class="container">
+    <div id="container">
       <h1>Refresh Me</h1>
 
       <div class="dice">
@@ -25,7 +23,7 @@
 
     </div>
 
-
+    <script src="external.js"></script>
   </body>
 
   <footer>
